

Changes since 5.0b1
-------------------

12/4/14
    - Added new option 'opf.init_from_mpc' to force some solvers to
      use the starting point supplied in the MATPOWER case to
      initialize the optimization variables for the OPF, instead
      of creating its own starting point. Currently only implemented
      for Ipopt, Knitro and MIPS.
    
12/2/14
    - Added new option 'out.suppress_detail' to quickly suppress all
      pretty-printed output except the system summary. By default,
      detailed output is automatically suppressed for systems larger
      than 500 buses.
    - DC OPF formulation in opf_setup() now uses a single set of
      doubly-bounded constraints for flow limits, instead of two
      sets of upper bounded constraints.
    - Updated to MIPS 1.1, which includes additional user-settable
      options: xi, sigma, z0, alpha_min, rho_min, rho_max, mu_threshold
      and max_stepsize.
    - INCOMPATIBLE CHANGE: The name of the option to mips() to specify
      the maximum number of step-size reductions when step_control is on
      was changed from 'max_red' to 'sc.red_it' for consistency with
      other MATPOWER options.

11/18/14
    - Updated case300.m with new conversion from original CDF file.
      No longer uses 9900 MVA as proxy for unlimited line capacity.

11/13/14
    - Added capability for set_reorder() to automatically pad matrix
      or cell array before assignment of matrix or cell array with
      larger size in some dimensions. Added tests to t_ext2int2ext().

11/12/14
    - Loads at isolated buses are no longer included in results from
      total_load().
    - Fixed loads and shunts at isolated buses are no longer included
      in system and area summaries in printpf(). Line charging
      injections set to zero for DC power flow results.
    - Added tests for printpf() in t_printpf.m.
    - Changes to the internally indexed version of gencost now
      get properly copied back to externally indexed version by